@@ -116,7 +116,6 @@ export("+.section",
        oce.as.raw,
        oce.as.POSIXlt,
        oce.axis.POSIXct,
-       oceBisect,
        oceColorsGebco,
        oceColorsPalette,
        oceColorsJet,
